<resources>
    <string name="app_name">Wikipedia Searches</string>
    <string name="searchURL">https://ru.wikipedia.org/w/index.php?go=Перейти&amp;search=</string>
    <string name="tagPrompt">Tag your query</string>
    <string name="queryPrompt">Enter Wikipedia search query here</string>
    <string name="taggedSearches">Tagged Searches</string>
    <string name="edit">Edit</string>
    <string name="clearTags">Clear Tags</string>
    <string name="save">Save</string>
    <string name="erase">Erase</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="missingTitle">Missing Text</string>
    <string name="missingMessage">Please enter a search query and tag it</string>
    <string name="confirmTitle">Are you sure?</string>
    <string name="confirmMessage">This will delete all saved searches</string>
</resources>